finally fixed mobile no scroll issue (body had overflow hidder :D)

--- a/src/index.scss
+++ b/src/index.scss
@@ -29,7 +29,7 @@ body {
   user-select: none;
   font-family: "Montserrat", sans-serif;
   cursor: none;
-  overflow: hidden;
+  overflow-x: hidden;
 }
 
 @media (min-width: 1280px) {
